--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
         },
         "SAVE_USER": {
             "description": "Do you need to save user details? Usefull for getting userinfo and total user counts. May reduce filter capacity. Give yes or no",
-            "value": "no",
+            "value": "yes",
             "required": false
         },
         "HEROKU_API_KEY": {
